@@ -14,6 +14,7 @@
   *  - Changed GenericHID device demo to use the LUFA scheduler, added INTERRUPT_DATA_ENDPOINT and INTERRUPT_CONTROL_ENDPOINT compile
   *    time options
   *  - All comments in the library, bootloaders, demos and projects have now been spell-checked and spelling mistakes/typos corrected
+  *  - Added new PIMA_DATA_SIZE() define to the Still Image Host demo
   *
   *  \section Sec_ChangeLog090401 Version 090401
   *
